[gd_scene load_steps=30 format=3 uid="uid://bnfm3fc5l51mb"]

[ext_resource type="Script" path="res://scripts/Managers/InputManager.cs" id="2_itqj0"]
[ext_resource type="Resource" uid="uid://yf2osyn4pvt3" path="res://resources/input/player_input.tres" id="3_dr8yf"]
[ext_resource type="Script" path="res://addons/qodot/src/nodes/qodot_map.gd" id="4_vh5n1"]
[ext_resource type="Resource" uid="uid://c36hv0o6g0udo" path="res://definitions/qodot_fgd.tres" id="5_7ibwn"]
[ext_resource type="Texture2D" uid="uid://cxoqhsrxebcve" path="res://textures/grid/dark/texture_08.png" id="6_2c8rw"]
[ext_resource type="Script" path="res://scripts/Qodot/QodotCustomTrigger.cs" id="7_6xknv"]
[ext_resource type="Script" path="res://addons/qodot/game_definitions/fgd/solid_classes/mover.gd" id="8_jnhaj"]
[ext_resource type="Texture2D" uid="uid://bofrt6byqqgvp" path="res://textures/grid/orange/texture_08.png" id="9_2imve"]
[ext_resource type="Script" path="res://addons/qodot/game_definitions/fgd/solid_classes/button.gd" id="10_r2kui"]
[ext_resource type="PackedScene" uid="uid://bsgwkv72xs4ab" path="res://scenes/game_objects/entities/player.tscn" id="11_al5ng"]
[ext_resource type="PackedScene" uid="uid://yd4qormrspt8" path="res://scenes/game_objects/entities/weapon_test_wall.tscn" id="13_sc1xy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xms1l"]

[sub_resource type="Sky" id="Sky_ym2uw"]
sky_material = SubResource("ProceduralSkyMaterial_xms1l")

[sub_resource type="Environment" id="Environment_lntm0"]
background_mode = 2
sky = SubResource("Sky_ym2uw")
volumetric_fog_density = 0.0
volumetric_fog_emission = Color(0.619608, 0.568627, 0.368627, 1)
volumetric_fog_sky_affect = 0.165
adjustment_saturation = 1.02

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_1keek"]
exposure_multiplier = 1.601
dof_blur_far_distance = 100.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q8w2k"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hxpue"]
albedo_texture = ExtResource("6_2c8rw")

[sub_resource type="ArrayMesh" id="ArrayMesh_ecnwl"]
_surfaces = [{
"aabb": AABB(-37, -1, -4, 41, 2.00001, 55),
"attribute_data": PackedByteArray(0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 128, 60, 0, 0, 128, 189, 0, 0, 128, 60, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 76, 63, 0, 0, 128, 188, 0, 0, 76, 63, 0, 0, 128, 60, 0, 0, 128, 189, 0, 0, 128, 60, 0, 0, 128, 61, 0, 0, 128, 189, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 76, 191, 0, 0, 128, 61, 0, 0, 76, 191, 0, 0, 128, 189, 0, 0, 128, 189, 0, 0, 128, 189, 0, 0, 76, 63, 0, 0, 128, 189, 0, 0, 76, 63, 0, 0, 128, 61, 0, 0, 128, 189, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 128, 60, 0, 0, 76, 191, 0, 0, 128, 60, 0, 0, 76, 191, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 128, 60, 0, 0, 128, 189, 0, 0, 128, 60, 0, 0, 20, 63, 0, 0, 128, 188, 0, 0, 20, 63, 0, 0, 128, 60, 0, 0, 128, 61, 0, 0, 128, 60, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 128, 60, 0, 0, 128, 189, 0, 0, 128, 60, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 20, 63, 0, 0, 128, 189, 0, 0, 20, 63, 0, 0, 128, 189, 0, 0, 128, 61, 0, 0, 128, 189, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 20, 63, 0, 0, 128, 189, 0, 0, 20, 63, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 128, 60, 0, 0, 128, 189, 0, 0, 128, 60, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 20, 191, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 60, 0, 0, 20, 191, 0, 0, 128, 60),
"format": 34359742487,
"index_count": 72,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 36, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 40, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 44, 0, 46, 0, 47, 0),
"material": SubResource("StandardMaterial3D_hxpue"),
"name": "grid/dark/texture_08",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 76, 66, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 76, 66, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 76, 66, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 76, 66, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 76, 66, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 76, 66, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 76, 66, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 76, 66, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 76, 66, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 76, 66, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 76, 66, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 76, 66, 0, 0, 20, 194, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 20, 194, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 20, 194, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 20, 194, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 20, 194, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 20, 194, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 20, 194, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 20, 194, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 20, 194, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 20, 194, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 20, 194, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 20, 194, 0, 0, 128, 191, 0, 0, 128, 64, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="ArrayOccluder3D" id="ArrayOccluder3D_0oyna"]
vertices = PackedVector3Array(-4, 1, -4, -4, -1, -4, 4, -1, -4, 4, 1, -4, -4, 1, -4, -4, 1, 51, -4, -1, 51, -4, -1, -4, 4, -1, -4, -4, -1, -4, -4, -1, 51, 4, -1, 51, 4, 1, -4, 4, 1, 51, -4, 1, 51, -4, 1, -4, 4, 1, -4, 4, -1, -4, 4, -1, 51, 4, 1, 51, -4, 1, 51, 4, 1, 51, 4, -1, 51, -4, -1, 51, -37, 1, -4, -37, -1, -4, -4, -1, -4, -4, 1, -4, -37, 1, -4, -37, 1, 4, -37, -1, 4, -37, -1, -4, -4, -1, -4, -37, -1, -4, -37, -1, 4, -4, -1, 4, -4, 1, -4, -4, 1, 4, -37, 1, 4, -37, 1, -4, -4, 1, -4, -4, -1, -4, -4, -1, 4, -4, 1, 4, -37, 1, 4, -4, 1, 4, -4, -1, 4, -37, -1, 4)
indices = PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 0, 2, 3, 4, 5, 6, 4, 6, 7, 8, 9, 10, 8, 10, 11, 12, 13, 14, 12, 14, 15, 16, 17, 18, 16, 18, 19, 20, 21, 22, 20, 22, 23, 24, 25, 26, 24, 26, 27, 28, 29, 30, 28, 30, 31, 32, 33, 34, 32, 34, 35, 36, 37, 38, 36, 38, 39, 40, 41, 42, 40, 42, 43, 44, 45, 46, 44, 46, 47)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_53ilc"]
points = PackedVector3Array(-4, 1, -4, -4, -1, -4, 4, -1, -4, 4, 1, -4, -4, 1, 51, -4, -1, 51, 4, -1, 51, 4, 1, 51)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1x3ce"]
points = PackedVector3Array(-37, 1, -4, -37, -1, -4, -4, -1, -4, -4, 1, -4, -37, 1, 4, -37, -1, 4, -4, -1, 4, -4, 1, 4)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_t2sgp"]
points = PackedVector3Array(-4, 4, -5, -4, -4, -5, 4, -4, -5, 4, 4, -5, -4, 4, 5, -4, -4, 5, 4, -4, 5, 4, 4, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l5m5k"]
albedo_texture = ExtResource("9_2imve")

[sub_resource type="ArrayMesh" id="ArrayMesh_cj5bg"]
_surfaces = [{
"aabb": AABB(-4, -3.5, -1, 8, 7.00001, 2),
"attribute_data": PackedByteArray(0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 0, 190, 0, 0, 208, 62, 0, 0, 0, 190, 0, 0, 224, 62, 0, 0, 0, 190, 0, 0, 224, 62, 0, 0, 128, 188, 0, 0, 208, 62, 0, 0, 128, 188, 0, 0, 208, 190, 0, 0, 128, 189, 0, 0, 208, 190, 0, 0, 128, 61, 0, 0, 224, 190, 0, 0, 128, 61, 0, 0, 224, 190, 0, 0, 128, 189, 0, 0, 208, 62, 0, 0, 128, 189, 0, 0, 224, 62, 0, 0, 128, 189, 0, 0, 224, 62, 0, 0, 128, 61, 0, 0, 208, 62, 0, 0, 128, 61, 0, 0, 208, 190, 0, 0, 0, 190, 0, 0, 208, 190, 0, 0, 128, 188, 0, 0, 224, 190, 0, 0, 128, 188, 0, 0, 224, 190, 0, 0, 0, 190, 0, 0, 128, 189, 0, 0, 0, 190, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0),
"material": SubResource("StandardMaterial3D_l5m5k"),
"name": "grid/orange/texture_08",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 128, 192, 0, 0, 96, 64, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 96, 192, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 96, 192, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 96, 64, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 96, 64, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 96, 64, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 96, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 96, 192, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 96, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 96, 192, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 96, 192, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 96, 192, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 96, 64, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 96, 64, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 96, 64, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 96, 64, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 96, 64, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 96, 192, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 96, 192, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 96, 64, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 96, 64, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 96, 64, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 96, 192, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 96, 192, 0, 0, 128, 63, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jjqqj"]
points = PackedVector3Array(-4, 3.5, -1, -4, -3.5, -1, 4, -3.5, -1, 4, 3.5, -1, -4, 3.5, 1, -4, -3.5, 1, 4, -3.5, 1, 4, 3.5, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_i7tta"]
_surfaces = [{
"aabb": AABB(-1, -3.5, -4, 2, 7.00001, 8),
"attribute_data": PackedByteArray(0, 0, 224, 62, 0, 0, 0, 190, 0, 0, 224, 62, 0, 0, 128, 188, 0, 0, 208, 62, 0, 0, 128, 188, 0, 0, 208, 62, 0, 0, 0, 190, 0, 0, 128, 189, 0, 0, 0, 190, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 208, 190, 0, 0, 128, 61, 0, 0, 224, 190, 0, 0, 128, 61, 0, 0, 224, 190, 0, 0, 128, 189, 0, 0, 208, 190, 0, 0, 128, 189, 0, 0, 208, 62, 0, 0, 128, 61, 0, 0, 208, 62, 0, 0, 128, 189, 0, 0, 224, 62, 0, 0, 128, 189, 0, 0, 224, 62, 0, 0, 128, 61, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 0, 190, 0, 0, 224, 190, 0, 0, 0, 190, 0, 0, 208, 190, 0, 0, 0, 190, 0, 0, 208, 190, 0, 0, 128, 188, 0, 0, 224, 190, 0, 0, 128, 188),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0),
"material": SubResource("StandardMaterial3D_l5m5k"),
"name": "grid/orange/texture_08",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 128, 191, 0, 0, 96, 64, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 96, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 96, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 96, 64, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 96, 64, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 96, 64, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 96, 192, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 96, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 96, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 96, 192, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 96, 192, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 96, 192, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 96, 64, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 96, 64, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 96, 64, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 96, 64, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 96, 64, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 96, 192, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 96, 192, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 96, 64, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 96, 64, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 96, 64, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 96, 192, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 96, 192, 0, 0, 128, 64, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 255, 255, 0, 0, 255, 191, 255, 127, 255, 255, 0, 0, 255, 191, 255, 127, 255, 255, 0, 0, 255, 191, 255, 127, 255, 255, 0, 0, 255, 191, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_klk7m"]
points = PackedVector3Array(-1, 3.5, -4, -1, -3.5, -4, 1, -3.5, -4, 1, 3.5, -4, -1, 3.5, 4, -1, -3.5, 4, 1, -3.5, 4, 1, 3.5, 4)

[sub_resource type="ArrayMesh" id="ArrayMesh_ddag8"]
_surfaces = [{
"aabb": AABB(-3, -0.5, -4, 6, 1.00001, 8),
"attribute_data": PackedByteArray(0, 0, 168, 62, 0, 0, 0, 189, 0, 0, 168, 62, 0, 0, 128, 188, 0, 0, 112, 62, 0, 0, 128, 188, 0, 0, 112, 62, 0, 0, 0, 189, 0, 0, 128, 189, 0, 0, 0, 189, 0, 0, 128, 61, 0, 0, 0, 189, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 61, 0, 0, 112, 62, 0, 0, 128, 61, 0, 0, 168, 62, 0, 0, 128, 189, 0, 0, 168, 62, 0, 0, 128, 189, 0, 0, 112, 62, 0, 0, 128, 189, 0, 0, 112, 62, 0, 0, 128, 61, 0, 0, 112, 62, 0, 0, 128, 61, 0, 0, 168, 62, 0, 0, 128, 189, 0, 0, 168, 62, 0, 0, 128, 61, 0, 0, 0, 189, 0, 0, 128, 61, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 128, 188, 0, 0, 128, 189, 0, 0, 0, 189, 0, 0, 168, 190, 0, 0, 0, 189, 0, 0, 112, 190, 0, 0, 0, 189, 0, 0, 112, 190, 0, 0, 128, 188, 0, 0, 168, 190, 0, 0, 128, 188),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0),
"material": SubResource("StandardMaterial3D_l5m5k"),
"name": "grid/orange/texture_08",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 64, 192, 0, 0, 0, 63, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 191, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 191, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 63, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 63, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 63, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 191, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 191, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 191, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 191, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 191, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 191, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 63, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 63, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 63, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 63, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 63, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 191, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 191, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 63, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 63, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 63, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 191, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 191, 0, 0, 128, 64, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_f6gmq"]
points = PackedVector3Array(-3, 0.5, -4, -3, -0.5, -4, 3, -0.5, -4, 3, 0.5, -4, -3, 0.5, 4, -3, -0.5, 4, 3, -0.5, 4, 3, 0.5, 4)

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0993204, 0.0205519, 0.0939817)

[node name="InputManager" type="Node" parent="."]
script = ExtResource("2_itqj0")
_input = ExtResource("3_dr8yf")
_update = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lntm0")
camera_attributes = SubResource("CameraAttributesPractical_1keek")

[node name="Player" parent="." instance=ExtResource("11_al5ng")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.895841, -0.132147, -0.424271, 0.284018, -0.564027, 0.775376, -0.341764, -0.815114, -0.467746, 0, 22.7694, 0)

[node name="QodotMap" type="Node3D" parent="."]
script = ExtResource("4_vh5n1")
map_file = "C:/Users/calco/Documents/Calcopod/Development/GameDev/Godot/bitdefender_shithead/Yellow/maps/comp_test.map"
entity_fgd = ExtResource("5_7ibwn")
texture_file_extensions = PackedStringArray("png", "jpg", "jpeg", "bmp")
default_material = SubResource("StandardMaterial3D_q8w2k")

[node name="entity_0_worldspawn" type="StaticBody3D" parent="QodotMap"]

[node name="entity_0_mesh_instance" type="MeshInstance3D" parent="QodotMap/entity_0_worldspawn"]
mesh = SubResource("ArrayMesh_ecnwl")

[node name="entity_0_occluder_instance" type="OccluderInstance3D" parent="QodotMap/entity_0_worldspawn"]
occluder = SubResource("ArrayOccluder3D_0oyna")

[node name="entity_0_brush_0_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_53ilc")

[node name="entity_0_brush_1_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_1x3ce")

[node name="entity_1_custom_trigger" type="Area3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 19)
collision_layer = 16384
collision_mask = 1056
script = ExtResource("7_6xknv")
properties = {
"classname": "custom_trigger",
"layer_mask": "player",
"on_enter": "true",
"on_exit": "false",
"one_shot": "false",
"target": "ctrig_door"
}

[node name="entity_1_brush_0_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_1_custom_trigger"]
shape = SubResource("ConvexPolygonShape3D_t2sgp")

[node name="entity_2_mover" type="CharacterBody3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 27)
script = ExtResource("8_jnhaj")
properties = {
"classname": "mover",
"close_delay": -1.0,
"rotation": Vector3(0, 0, 0),
"scale": Vector3(1, 1, 1),
"speed": 1.0,
"targetname": "ctrig_door",
"togglable": "true",
"translation": Vector3(0, 20, 0)
}

[node name="entity_2_mesh_instance" type="MeshInstance3D" parent="QodotMap/entity_2_mover"]
mesh = SubResource("ArrayMesh_cj5bg")

[node name="entity_2_brush_0_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_2_mover"]
shape = SubResource("ConvexPolygonShape3D_jjqqj")

[node name="entity_3_mover" type="CharacterBody3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 4.5, 0)
script = ExtResource("8_jnhaj")
properties = {
"classname": "mover",
"close_delay": 0.2,
"rotation": Vector3(0, 0, 0),
"scale": Vector3(1, 1, 1),
"speed": 1.0,
"targetname": "cbtn_door",
"togglable": "true",
"translation": Vector3(0, 20, 0)
}

[node name="entity_3_mesh_instance" type="MeshInstance3D" parent="QodotMap/entity_3_mover"]
mesh = SubResource("ArrayMesh_i7tta")

[node name="entity_3_brush_0_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_3_mover"]
shape = SubResource("ConvexPolygonShape3D_klk7m")

[node name="entity_4_button" type="Area3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 1.5, 0)
script = ExtResource("10_r2kui")
properties = {
"axis": Vector3(0, -1, 0),
"classname": "button",
"depth": 0.8,
"layer_mask": "player",
"on_pressed": "true",
"on_released": "false",
"one_shot": "false",
"press_signal_delay": 0.0,
"release_delay": 0.0,
"release_signal_delay": 0.0,
"speed": 8.0,
"target": "cbtn_door",
"trigger_signal_delay": 0.0
}

[node name="entity_4_mesh_instance" type="MeshInstance3D" parent="QodotMap/entity_4_button"]
mesh = SubResource("ArrayMesh_ddag8")

[node name="entity_4_brush_0_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_4_button"]
shape = SubResource("ConvexPolygonShape3D_f6gmq")

[node name="WeaponTestWall" parent="." instance=ExtResource("13_sc1xy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 4.26875, 7.43502)

[connection signal="OnTriggerEnter" from="QodotMap/entity_1_custom_trigger" to="QodotMap/entity_2_mover" method="UseEnter"]
[connection signal="OnTriggerEnterParamless" from="QodotMap/entity_1_custom_trigger" to="QodotMap/entity_2_mover" method="use"]
[connection signal="OnTriggerExit" from="QodotMap/entity_1_custom_trigger" to="QodotMap/entity_2_mover" method="UseExit"]
[connection signal="OnPressed" from="QodotMap/entity_4_button" to="QodotMap/entity_3_mover" method="UsePressed"]
[connection signal="OnReleased" from="QodotMap/entity_4_button" to="QodotMap/entity_3_mover" method="UseReleased"]
[connection signal="OnTriggerEnter" from="QodotMap/entity_4_button" to="QodotMap/entity_3_mover" method="UseEnter"]
[connection signal="OnTriggerExit" from="QodotMap/entity_4_button" to="QodotMap/entity_3_mover" method="UseExit"]
[connection signal="pressed" from="QodotMap/entity_4_button" to="QodotMap/entity_3_mover" method="use"]
